add edit & update

--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -7,7 +7,7 @@
 <table>
 	<tr>
 		<td>Name</td>
-		<td>Ｐarty</td>
+		<td>Party</td>
 		<td>Age</td>
 		<td>Action</td>
 	</tr>
@@ -17,7 +17,9 @@
 		<td><%= link_to candidate.name, candidate_path(candidate.id) %></td>
 		<td><%= candidate.party %></td>
 		<td><%= candidate.age %></td>
-		<td>Action</td>
+		<td>
+			<%= link_to 'update', edit_candidate_path(candidate.id) %>
+		</td>
 	</tr>
 <% end %>
 </table>
