--- a/app/views/candidates/show.html.erb
+++ b/app/views/candidates/show.html.erb
@@ -1,2 +1,14 @@
-<h1><%= @candidate.name %></h1>
+<% if @candidate %>
+	<h1><%= @candidate.name%></h1>
+	
+	<ul>
+		<li>party: <%= @candidate.party %></li>
+		<li>age: <%= @candidate.age %></li>
+		<li>politics: <%= @candidate.politics%></li>
+	</ul>
 
+<% else %>
+
+	<h1>No Record Found ! !</h1>
+
+<% end %>
