--- a/app/views/candidates/index.html.erb
+++ b/app/views/candidates/index.html.erb
@@ -1,25 +1,27 @@
-<%= flash[:notice] %>
-
-<h1>Hi</h1>
+<h1>Welcome</h1>
 
 <%= link_to 'Add Candidate', new_candidate_path %>
 
 <table>
 	<tr>
+		<td></td>
+		<td>Votes</td>
 		<td>Name</td>
 		<td>Party</td>
 		<td>Age</td>
+		<td>Action</td>
 		<td>Action</td>
 	</tr>
 
 	<% @candidates.each do |candidate| %>
 	<tr>
+		<td><%= link_to 'Vote', vote_candidate_path(candidate.id), method: 'post' %></td>
+		<td><%= candidate.vote_logs.size %></td>
 		<td><%= link_to candidate.name, candidate_path(candidate.id) %></td>
 		<td><%= candidate.party %></td>
 		<td><%= candidate.age %></td>
-		<td>
-			<%= link_to 'update', edit_candidate_path(candidate.id) %>
-		</td>
+		<td><%= link_to 'update', edit_candidate_path(candidate.id) %></td>
+		<td><%= link_to 'delete', candidate_path(candidate.id), method: 'delete', data: {confirm: 'Are you sure ?'} %></td>
 	</tr>
 <% end %>
 </table>
